[ref] use StandardCharsets instead of string charset definition in strava emulator